--- a/HomeWork22/HomeWork22/Views/Base.lproj/LaunchScreen.storyboard
+++ b/HomeWork22/HomeWork22/Views/Base.lproj/LaunchScreen.storyboard
@@ -15,8 +15,20 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="iStore" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TrO-Ik-ZQY">
+                                <rect key="frame" x="153" y="417.66666666666669" width="87" height="42"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="35"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="TrO-Ik-ZQY" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="n1m-Ii-80u"/>
+                            <constraint firstItem="TrO-Ik-ZQY" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="p42-OY-1lk"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
