--- a/HomeWork22/HomeWork22/Views/Base.lproj/Main.storyboard
+++ b/HomeWork22/HomeWork22/Views/Base.lproj/Main.storyboard
@@ -223,14 +223,14 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ReviewsCell" id="ISh-Dd-VP0" customClass="ReviewsCell" customModule="HomeWork22" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="50" width="393" height="130"/>
+                                <rect key="frame" x="0.0" y="50" width="393" height="130.33332824707031"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ISh-Dd-VP0" id="jlo-hV-qAL">
-                                    <rect key="frame" x="0.0" y="0.0" width="393" height="130"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="393" height="130.33332824707031"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="J1E-II-aV6">
-                                            <rect key="frame" x="10" y="10" width="373" height="110"/>
+                                            <rect key="frame" x="10" y="9.9999999999999929" width="373" height="110.33333333333331"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cpR-Ps-xg0">
                                                     <rect key="frame" x="0.0" y="0.0" width="373" height="24"/>
@@ -239,13 +239,13 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5IJ-DE-0VU">
-                                                    <rect key="frame" x="0.0" y="28.999999999999996" width="373" height="55.666666666666657"/>
+                                                    <rect key="frame" x="0.0" y="29" width="373" height="56"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="redraw" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="justified" lineBreakMode="clip" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1yH-9B-7tR">
-                                                    <rect key="frame" x="0.0" y="89.666666666666671" width="373" height="20.333333333333329"/>
+                                                    <rect key="frame" x="0.0" y="90" width="373" height="20.333333333333329"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -367,7 +367,7 @@
                                                 </constraints>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="n2L-Of-iAb">
-                                                <rect key="frame" x="0.0" y="95.000000000000028" width="343" height="326.66666666666674"/>
+                                                <rect key="frame" x="0.0" y="95" width="343" height="271.66666666666669"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Your feedback" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ftY-pH-0Ev">
                                                         <rect key="frame" x="0.0" y="0.0" width="343" height="35"/>
@@ -380,6 +380,9 @@
                                                     </label>
                                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="8we-lB-0Q8">
                                                         <rect key="frame" x="0.0" y="49.999999999999986" width="343" height="171.66666666666663"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" secondItem="8we-lB-0Q8" secondAttribute="height" multiplier="2:1" id="Nyt-H0-fs7"/>
+                                                        </constraints>
                                                         <color key="textColor" systemColor="labelColor"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -393,23 +396,23 @@
                                                         <color key="textColor" systemColor="systemRedColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="4" translatesAutoresizingMaskIntoConstraints="NO" id="IQL-55-LII">
-                                                        <rect key="frame" x="0.0" y="286.66666666666663" width="343" height="41"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="height" constant="40" id="aMY-2Z-fCv"/>
-                                                        </constraints>
-                                                        <segments>
-                                                            <segment title="⭐️"/>
-                                                            <segment title="⭐️⭐️"/>
-                                                            <segment title="⭐️⭐️⭐️"/>
-                                                            <segment title="⭐️(4)"/>
-                                                            <segment title="⭐️(5)"/>
-                                                        </segments>
-                                                    </segmentedControl>
                                                 </subviews>
                                             </stackView>
+                                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="4" translatesAutoresizingMaskIntoConstraints="NO" id="IQL-55-LII">
+                                                <rect key="frame" x="0.0" y="391.66666666666663" width="343" height="41"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="40" id="aMY-2Z-fCv"/>
+                                                </constraints>
+                                                <segments>
+                                                    <segment title="⭐️"/>
+                                                    <segment title="⭐️⭐️"/>
+                                                    <segment title="⭐️⭐️⭐️"/>
+                                                    <segment title="⭐️(4)"/>
+                                                    <segment title="⭐️(5)"/>
+                                                </segments>
+                                            </segmentedControl>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="bGR-xy-DEP">
-                                                <rect key="frame" x="0.0" y="446.66666666666663" width="343" height="93.333333333333371"/>
+                                                <rect key="frame" x="0.0" y="456.66666666666663" width="343" height="83.333333333333371"/>
                                                 <subviews>
                                                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QMh-HN-00N">
                                                         <rect key="frame" x="0.0" y="0.0" width="61" height="50"/>
@@ -443,7 +446,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="wdS-Pq-4gI"/>
                     <connections>
-                        <outlet property="centerYConstraint" destination="Cbs-JP-eL1" id="mgX-4O-v5o"/>
+                        <outlet property="centerYConstraint" destination="Cbs-JP-eL1" id="Od3-GF-ffN"/>
                         <outlet property="feedbackUser" destination="8we-lB-0Q8" id="DRg-aF-1fS"/>
                         <outlet property="imageDevice" destination="29e-u6-0N7" id="fwc-fR-mIj"/>
                         <outlet property="lbl" destination="xe0-nh-49q" id="I1B-hD-wh6"/>
@@ -453,6 +456,7 @@
                         <outlet property="ratingDevice" destination="Cle-Pl-0GK" id="HzX-Gk-FGk"/>
                         <outlet property="ratingUser" destination="IQL-55-LII" id="ezk-v1-orD"/>
                         <outlet property="saveDataBtn" destination="QMh-HN-00N" id="BCP-gf-hFS"/>
+                        <outlet property="stackViewPreview" destination="hRS-2i-jfR" id="X20-F0-Szb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UgP-Ch-lXO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
